# MyTestCode

./: README.md
Qml/TestQml_20211215_Translator/: ListModel.cpp  Translator.cpp  Translator.h  main.qml  trans_en_US.ts  trans_zh_CN.ts
Qml6/TestQml_20220416_Calendar/: CMakeLists.txt  main.cpp
Qml6/TestQml_20220422_TreeView/: CMakeLists.txt  main.cpp
Qt/TestQt_20260407_QssImage/: main.cpp  mainwindow.ui  res.qrc
Qt6/TestQt_20251220_Future/: CMakeLists.txt  TaskManager.cpp  TaskManager.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
